Aula 13.12
Modelando endpoints de consultas com dados agregados (ideal para
gráficos e dashboards)